# OperationStacked/Entities/Recipe.cs
@@ -3,28 +3,17 @@ using System.ComponentModel.DataAnnotations.Schema;
 using System.Text.Json;
 
 namespace OperationStacked.Entities;
-
 public class Recipe
 {
     [Key]
     [DatabaseGenerated(DatabaseGeneratedOption.Identity)]
-    public int Id { get; set; }
-    
+    public Guid  Id{ get; set; }
+    [Required]
     public string Name { get; set; }
     
     public string Steps { get; set; }
-    
-    public List<string> GetSteps()
-    {
-        return JsonSerializer.Deserialize<List<string>>(Steps);
-    }
-    
-    public void SetSteps(List<string> steps)
-    {
-        Steps = JsonSerializer.Serialize(steps);
-    }
-    
+
     public Guid UserId { get; set; }
     
-    public List<Ingredient> Ingredients { get; set; }
+    public List<RecipeIngredient> Ingredients { get; set; }
 }
